--- a/templates/inc/header.html.twig
+++ b/templates/inc/header.html.twig
@@ -4,7 +4,7 @@
         <a href="#" class="logo"><h1>Logo</h1></a>
             <nav class="nav">
                 <ul class="nav--menu">
-                    <li class="nav--menu__item"><a href="#">Log in</a></li>
+                    <li class="nav--menu__item"><a href="{{ path('login') }}">Log in</a></li>
                     <li class="nav--menu__item"><a href="{{ path('user_registration') }}">Sign up</a></li>
                 </ul>
             </nav>
