--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,8 +7,11 @@
 body{
     font-size: 16px;
     line-height: 20px;
-    font-family: 'Lato', sans-serif;
+    font-family: Lato, sans-serif;
     width: 100%;
+    font-weight: 400;
+    -webkit-font-smoothing: antialiased;
+    color: #212529;
 }
 a{
     text-decoration: none;
@@ -102,7 +105,7 @@ form{
     max-width: 100%;
     margin: 0 auto;
     padding: 40px;
-    background: #839496;
+    background: #ecf0f1;
     font-family: 'Lato', sans-serif;
 }
 form div{
@@ -112,7 +115,6 @@ form div{
 form div label{
     display: block;
     margin-bottom: 5px;
-    color: #fff;
 }
 form div input{
     border: none;
@@ -124,7 +126,7 @@ form div input{
 }
 form button[type=submit]{
     border: none;
-    background: #B58900;
+    background: #95a5a6;
     padding: 10px;
     font-size: 16px;
     color: #fff;
@@ -133,7 +135,7 @@ form button[type=submit]{
 .error{
     padding: 20px;
     border-radius: 3px;
-    background: #CB4B16;
+    background: #E74C3C;
     color: #fff;
     margin-bottom: 40px;
 }
