--- a/templates/inc/header.html.twig
+++ b/templates/inc/header.html.twig
@@ -4,8 +4,13 @@
         <a href="#" class="logo"><h1>Logo</h1></a>
             <nav class="nav">
                 <ul class="nav--menu">
-                    <li class="nav--menu__item"><a href="{{ path('login') }}">Log in</a></li>
-                    <li class="nav--menu__item"><a href="{{ path('user_registration') }}">Sign up</a></li>
+                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                        <li class="nav--menu__item"><a href="#">Log out</a></li>
+                        <li class="nav--menu__item"><a href="/add">Add new article</a></li>
+                    {% else %}
+                        <li class="nav--menu__item"><a href="{{ path('login') }}">Log in</a></li>
+                        <li class="nav--menu__item"><a href="{{ path('user_registration') }}">Sign up</a></li>
+                    {% endif %}
                 </ul>
             </nav>
         </div>
